--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>GIT_kurs</title>
 </head>
 <body>
-    
+    <section>
+        <h1>Section 01</h1> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
+    </section>
 </body>
 </html>
