--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT_kurs</title>
 </head>
+
 <body>
     <section>
-        <h1>Section 01</h1> 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
+        <h1>Section 01</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum
+            aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
     </section>
+
+    <section>
+        <h1>Section 02</h1>
+        <p>Content of section 02 written in between "p" for paragraph</p>
+    </section>
+
 </body>
+
 </html>
