Section 01 modified - contains 3 paragraphs

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT_kurs</title>
 </head>
+
 <body>
     <section>
-        <h1>Section 01</h1> 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
+        <h1>Section 01</h1>
+        <p>Lorem ipsum - paragraph 01</p>
+
+        <p>Lorem ipsum - paragraph 02</p>
+
+        <p>Lorem ipsum - paragraph 03</p>
+
     </section>
 </body>
+
 </html>
