File index.html modified with redirect to Hello, and Hello.html added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <section>
         <h1>Section 01</h1>
+        <a href="hello.html"> Go to Hello page</a>
+
         <p>Lorem ipsum - paragraph 01</p>
 
         <p>Lorem ipsum - paragraph 02</p>
