Section 02 modified - more paragraphs added

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <section>
         <h1>Section 01</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum
-            aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
+        <p>Lorem ipsum mucho texto</p>
     </section>
 
     <section>
         <h1>Section 02</h1>
         <p>Content of section 02 written in between "p" for paragraph</p>
+        <p>Second paragraph - Content of section 02</p>
+        <p>Third paragraph - Content of section 02</p>
     </section>
 
 </body>
