Edited Section 01 in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <h1>Section 01</h1> 
+        <h1>Section 01 - Edit</h1> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae modi quam ratione eligendi ipsum illum aspernatur a, itaque atque rem aliquid suscipit impedit nobis. Nulla a ullam quasi eos?</p>
     </section>
 </body>
